# db-client

./: AGENTS.md  Cargo.toml  README.md
src/: app.rs  database.rs  demo.rs  event.rs  main.rs  ui.rs
